# api/src/main/resources/public/api.yaml
@@ -1,33 +1,28 @@
 openapi: 3.0.1
 info:
   title: User Management API
-  version: 1.0.0
+  version: 0.1.0
   contact:
     name: Tancau Bogdan
     email: tncbogdan@gmail.com
-  description: This is the user management api
+  description: Car hire API
 servers:
   - url: 'http://localhost:{port}'
     description: local environment
     variables:
       port:
         default: '8080'
-  - url: 'https://devserver.domain.com/{custom-base-path}'
-    description: dev environment
-    variables:
-      custom-base-path:
-        default: user
 tags:
-  - name: user
+  - name: Sample
     description: User resource
 paths:
-  /user:
+  /users:
     get:
       tags:
         - user
-      summary: get all users
+      summary: Return a paginated list with the users
+      description: Return a paginated list with the users
       operationId: getUsers
-      description: Return a list of all users
       responses:
         '201':
           description: success
@@ -43,6 +38,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
+
     post:
       tags:
         - user
@@ -69,73 +65,21 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
-    put:
-      tags:
-        - user
-      summary: update an existing user
-      description: Updating the name of an existing user and return it
-      operationId: updateUser
-      requestBody:
-        description: The data of the user to update
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserDTO'
-      responses:
-        '200':
-          description: created user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '500':
-          $ref: '#/components/responses/ServerError'
-    patch:
-      tags:
-        - user
-      summary: patch fields from user
-      description: Patch the fields of an existing user
-      operationId: patchUser
-      requestBody:
-        description: The data of the user to update
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserDTO'
-      responses:
-        '200':
-          description: created user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '500':
-          $ref: '#/components/responses/ServerError'
-  /user/{id}:
+
+  /users/{id}:
     get:
       tags:
         - user
-      summary: get user by id
-      description: return the user by id
+      summary: Return a user by id.
+      description: Return a user by id.
       operationId: getUserById
       parameters:
         - in: path
           name: id
-          description: user id
-          required: true
           schema:
             type: integer
-            format: int32
+          description: The id of user
+          required: true
       responses:
         '200':
           description: success
@@ -147,34 +91,364 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
         '500':
           $ref: '#/components/responses/ServerError'
+
     delete:
       tags:
         - user
-      summary: removes a user
-      description: deletes a user identified by id
+      summary: Delete a user by id
+      description: Delete a user by id.
       operationId: deleteUser
       parameters:
         - in: path
           name: id
-          required: true
           schema:
             type: integer
-            format: int32
+          description: The id of user
+          required: true
       responses:
         '200':
           description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    patch:
+      tags:
+        - user
+      summary: Update user
+      description: Update a user’s details using a PATCH request
+      operationId: patchUser
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of user
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /cars:
+    post:
+      tags:
+        - car
+      summary: Create a car
+      description: Add a car to the fleet
+      operationId: addCar
+      requestBody:
+        description: Payload of car, id attribute is ignored
+        required : true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CarDTO'
+      responses:
+        '201':
+          description: created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
+
+    get:
+      tags:
+        - car
+      summary: Return a paginated list with the cars
+      description: Return a paginated list with the cars
+      operationId: getCars
+      responses:
+        '201':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CarDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /cars/{id}:
+    get:
+      tags:
+        - car
+      summary: Return a car by id.
+      description: Return a car by id
+      operationId: getCarById
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of car
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    delete:
+      tags:
+        - car
+      summary: Delete a car by id
+      description: Delete a car by id. The id is an integer.
+      operationId: deleteCar
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of car
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    patch:
+      tags:
+        - car
+      summary: Update car
+      description: Update a car’s details using a PATCH request
+      operationId: patchCar
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of car
+          required: true
+      requestBody:
+        description: The data of the user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CarDTO'
+      responses:
+        '200':
+          description: created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /rentals:
+    post:
+      tags:
+        - rental
+      summary: Create a reservation
+      description: Create a reservation
+      operationId: addRental
+      requestBody:
+        description: Payload of rental
+        required : true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RentalDTO'
+      responses:
+        '201':
+          description: created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    get:
+      tags:
+        - rental
+      summary: Return a paginated list with the rentals
+      description: Return a paginated list with the rentals
+      operationId: getRentals
+      responses:
+        '201':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /rentals/{id}:
+    get:
+      tags:
+        - rental
+      summary: Return a reservation by id.
+      description: Return a reservation by id. The id is an integer.
+      operationId: getRentalById
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of rental
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    delete:
+      tags:
+        - rental
+      summary: Cancel a rental by id
+      description: Cancel a rental by id. The id is an integer.
+      operationId: cancelRental
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of rental
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+    patch:
+      tags:
+        - rental
+      summary: Update a reservation
+      description: Update a reservation’s details using a PATCH request
+      operationId: patchRental
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: The id of rental
+          required: true
+      requestBody:
+        description: The data of the user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RentalDTO'
+      responses:
+        '200':
+          description: created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/ResourceNotFoundError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
 components:
   responses:
     Unauthorized:
       description: unauthorized
+
     BadRequest:
       description: bad request
       content:
@@ -183,6 +457,9 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/ValidationDTO'
+
+    ResourceNotFoundError:
+      description: resource not found error
     ServerError:
       description: internal server error
       content:
@@ -190,6 +467,85 @@ components:
           schema:
             $ref: '#/components/schemas/ErrorDTO'
   schemas:
+    UserDTO:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+        email:
+          type: string
+          format: email
+          pattern: '^(.+)@(.+)$'
+        password:
+          type: string
+          format: password
+        username:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        country:
+          type: string
+        driverLicenseNo:
+          type: string
+        status:
+          type: string
+          enum: [ACTIVE, DELETED]
+
+    CarDTO:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+        make:
+          type: string
+        model:
+          type: string
+        year:
+          type: integer
+          format: int32
+        mileage:
+          type: integer
+          format: int32
+        fuel:
+          type: string
+        carClazz:
+          type: string
+        status:
+          type: string
+          enum: [ACTIVE, DELETED]
+
+    RentalDTO:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+        userId:
+          type: integer
+          format: int32
+        carId:
+          type: integer
+          format: int32
+        startDate:
+          type: string
+          format: date-time
+        endDate:
+          type: string
+          format: date-time
+        status:
+          type: string
+          enum: [ACTIVE, CANCELLED]
+
     ValidationDTO:
       type: object
       properties:
@@ -199,6 +555,7 @@ components:
           type: string
         description:
           type: string
+
     ErrorDTO:
       type: object
       properties:
@@ -206,38 +563,3 @@ components:
           type: string
         message:
           type: string
-    UserDTO:
-      type: object
-      required:
-        - name
-      properties:
-        id:
-          type: integer
-          format: int32
-          description: id of the student
-        email:
-          type: string
-          description: user email
-        password:
-          type: string
-          description: user password
-        username:
-          type: string
-          example: Tancau Bogdan
-          description: full name of the user
-        first name:
-          type: string
-        last name:
-          type: string
-        country:
-          type: string
-          description: country of rezidence
-        driveer`s license:
-          type: string
-        status:
-          type: string
-          description: “Order Status”
-          enum:
-            - “ ACTIVE”
-            - “DELETED”
-
