# user.management/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/UserController.java
@@ -1,19 +1,20 @@
 package ro.agilehub.javacourse.car.hire.user.controller;
 
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ro.agilehub.javacourse.car.hire.api.model.UserDTO;
-import ro.agilehub.javacourse.car.hire.api.specification.UserApi;
+import ro.agilehub.javacourse.car.hire.api.specification.UsersApi;
 
 import javax.validation.Valid;
 import java.util.Collections;
 import java.util.List;
 
 @RestController
-public class UserController implements UserApi {
+public class UserController implements UsersApi {
 
-    @Override
+       @Override
     public ResponseEntity<List<UserDTO>> getUsers() {
         return ResponseEntity.ok(Collections.singletonList(buildDummyUser()));
     }
@@ -24,7 +25,7 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<Void> deleteUser(Integer id) {
+    public ResponseEntity<UserDTO> deleteUser(Integer id) {
         return ResponseEntity.ok(null);
     }
 
@@ -33,7 +34,7 @@ public class UserController implements UserApi {
         return ResponseEntity.ok(buildDummyUser());
     }
 
-    @Override
+    //    @Override
     public ResponseEntity<UserDTO> patchUser(@Valid UserDTO userDTO) {
         return ResponseEntity.ok(buildDummyUser());
     }
@@ -44,5 +45,4 @@ public class UserController implements UserApi {
         userDTO.setUsername("My first sample");
         return userDTO;
     }
-
 }
